[package]
name = "SomnyTooTest"
version = "1.0.0"
authors = ["TvoiiSon tvoiison.dev@gmail.com"]
description = ""
repository = ""
readme = ""
edition = "2024"

[lib]
name = "somnytoo_test"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
aes-gcm = { version = "0.10", features = ["rand_core"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand_core = "0.6"
x25519-dalek = "2"
hkdf = "0.12"
anyhow = "1.0"
tracing = "0.1"
constant_time_eq = "0.4"
digest = "0.10"
hex = "0.4"
zeroize = "1.8.1"
thiserror = "2.0.16"
async-trait = "0.1"
dotenv = "0.15"
futures = "0.3"
lazy_static = "1.5.0"
blake3 = "1.8.2"
chacha20poly1305 = "0.10"