[package]
name = "SomnyTooTest"
version = "1.0.0"
authors = ["TvoiiSon tvoiison.dev@gmail.com"]
description = ""
repository = ""
readme = ""
edition = "2024"

[lib]
name = "somnytoo_test"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
aes-gcm = { version = "0.10", features = ["rand_core"] }
rand_core = "0.6"
x25519-dalek = "2"
hkdf = "0.12"
anyhow = "1.0"
tracing = "0.1"
constant_time_eq = "0.4"
digest = "0.10"
hex = "0.4"
zeroize = "1.8.1"
thiserror = "2.0.16"
num_cpus = "1.0"
lazy_static = "1.5.0"
chacha20 = "0.9"
chacha20poly1305 = "0.10"
blake3 = "1.8"
rayon = "1.11"
getrandom = "0.2.16"
parking_lot = "0.12.4"
bytes = "1.10.1"

[dev-dependencies]
tokio = { version = "1.47", features = ["full", "test-util"] }